--- a/01_Programacion_Basica/Sprint_01/Unidad_01_Introduccion_Herramientas/01_Workout/01_Markdown_en_Jupyter_I_alumno.ipynb
+++ b/01_Programacion_Basica/Sprint_01/Unidad_01_Introduccion_Herramientas/01_Workout/01_Markdown_en_Jupyter_I_alumno.ipynb
@@ -41,8 +41,17 @@
     "Haz doble clik en esta celda y verás cómo cambia el texto. Significa que estás en el **modo edición** de Markdown.\n",
     "\n",
     "Haz ctrl + enter para ejecuta la celda (o botón de play de arriba). Así abandonamos el modo edición y nuestro texto obtiene el formato que deseábamos.\n",
+    "Hola\n",
+    "\n",
     "\n",
     "**¡Tu turno!** Crea una celda nueva en el menu de arriba y selecciona la opción Markdown. Y luego intenta replicar la celda siguiente a la de la imagen"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "# Mis primeros pasos con Markdown..."
    ]
   },
   {
@@ -89,7 +98,10 @@
   {
    "cell_type": "markdown",
    "metadata": {},
-   "source": []
+   "source": [
+    "# Cabecera 1\n",
+    "## Cabecera 2"
+   ]
   },
   {
    "cell_type": "markdown",
@@ -99,11 +111,14 @@
    ]
   },
   {
-   "cell_type": "code",
-   "execution_count": null,
+   "cell_type": "markdown",
    "metadata": {},
-   "outputs": [],
-   "source": []
+   "source": [
+    "### Cabecera 3\n",
+    "#### Cabecera 4 \n",
+    "##### Cabecera 5\n",
+    "###### Cabecera 6"
+   ]
   },
   {
    "cell_type": "markdown",
@@ -122,6 +137,15 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
+    "<h1>Header 1 </h1>\n",
+    "<h2>Header 2 </h2>\n",
+    "<h3>Header 3 </h3>"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
     "## 4. Negrita, cursiva\n",
     "Para resaltar texto en negrita tenemos que rodearlo con asteriscos. En el caso en que queramos cursiva, será un único asterisco, y si deseamos combinar negrita con cursiva, son 3 asteriscos.\n"
    ]
@@ -129,7 +153,11 @@
   {
    "cell_type": "markdown",
    "metadata": {},
-   "source": []
+   "source": [
+    "**Texto en negrita**\n",
+    "*Texto en cursiva*\n",
+    "***Texto en negrita y cursiva***\n"
+   ]
   },
   {
    "cell_type": "markdown",
@@ -149,12 +177,15 @@
   {
    "cell_type": "markdown",
    "metadata": {},
-   "source": []
+   "source": [
+    ">Recuerda la importancia del conocimiento del negocio y del dominio\n",
+    ">>Y utilizar atajos de teclado"
+   ]
   }
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "Python 3 (ipykernel)",
+   "display_name": "venv",
    "language": "python",
    "name": "python3"
   },
@@ -168,12 +199,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.12.6"
-  },
-  "vscode": {
-   "interpreter": {
-    "hash": "252189e587d1e2aeba4a06e91fa71896c7a7f6e22e918b9407c7cde4ef2d5985"
-   }
+   "version": "3.12.10"
   }
  },
  "nbformat": 4,
