--- a/01_Programacion_Basica/Sprint_01/Unidad_01_Introduccion_Herramientas/02_Ejercicios_Workout/02_Ejercicios_Markdown_II.ipynb
+++ b/01_Programacion_Basica/Sprint_01/Unidad_01_Introduccion_Herramientas/02_Ejercicios_Workout/02_Ejercicios_Markdown_II.ipynb
@@ -58,12 +58,14 @@
    ]
   },
   {
-   "cell_type": "code",
-   "execution_count": null,
+   "cell_type": "markdown",
    "id": "a20102cb",
    "metadata": {},
-   "outputs": [],
-   "source": []
+   "source": [
+    "* Manzanas\n",
+    "* Platanos\n",
+    "* Uvas"
+   ]
   },
   {
    "cell_type": "markdown",
@@ -78,12 +80,14 @@
    ]
   },
   {
-   "cell_type": "code",
-   "execution_count": null,
+   "cell_type": "markdown",
    "id": "e5af15ee",
    "metadata": {},
-   "outputs": [],
-   "source": []
+   "source": [
+    "1. Arbol binario\n",
+    "2. Random Forest\n",
+    "3. Regresión logística"
+   ]
   },
   {
    "cell_type": "markdown",
@@ -102,12 +106,20 @@
    ]
   },
   {
-   "cell_type": "code",
-   "execution_count": null,
+   "cell_type": "markdown",
    "id": "0fc171fc",
    "metadata": {},
-   "outputs": [],
-   "source": []
+   "source": [
+    "# Frutas y verduras\n",
+    "1. Frutas\n",
+    "* Manzana\n",
+    "* Pera \n",
+    "* Melocotón\n",
+    "2. Verduras\n",
+    "* Lechuga\n",
+    "* Tomate \n",
+    "* Cebolla"
+   ]
   },
   {
    "cell_type": "markdown",
@@ -122,12 +134,13 @@
    ]
   },
   {
-   "cell_type": "code",
-   "execution_count": null,
-   "id": "2bcc0287",
+   "cell_type": "markdown",
+   "id": "7803506b",
    "metadata": {},
-   "outputs": [],
-   "source": []
+   "source": [
+    "[Por aqui se cruzan puentes](http://www.thebridge.tech)  \n",
+    "[Logo](http://www.google.com)"
+   ]
   },
   {
    "cell_type": "markdown",
@@ -141,17 +154,24 @@
    ]
   },
   {
-   "cell_type": "code",
-   "execution_count": null,
+   "cell_type": "markdown",
    "id": "9d31a21a",
    "metadata": {},
-   "outputs": [],
-   "source": []
+   "source": [
+    "---\n",
+    "```Python\n",
+    "print(\"Hola Mundo\")\n",
+    "```\n",
+    "***\n",
+    "\n",
+    "\n",
+    "\n"
+   ]
   }
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "Python 3 (ipykernel)",
+   "display_name": "venv",
    "language": "python",
    "name": "python3"
   },
@@ -165,7 +185,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.12.6"
+   "version": "3.12.10"
   }
  },
  "nbformat": 4,
