--- a/01_Programacion_Basica/Sprint_01/Unidad_02_Python_I/01_Workout/02_Print_y_otros_aspectos_basicos_wtoc.ipynb
+++ b/01_Programacion_Basica/Sprint_01/Unidad_02_Python_I/01_Workout/02_Print_y_otros_aspectos_basicos_wtoc.ipynb
@@ -64,17 +64,31 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 6,
    "metadata": {},
    "outputs": [],
-   "source": []
+   "source": [
+    "ingresos = 1000\n",
+    "gastos = 100\n",
+    "beneficios = ingresos - gastos"
+   ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 9,
    "metadata": {},
-   "outputs": [],
-   "source": []
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "1000 100 Los beneficios han sido de 900\n"
+     ]
+    }
+   ],
+   "source": [
+    "print ((ingresos), (gastos), \"Los beneficios han sido de\", beneficios)"
+   ]
   },
   {
    "cell_type": "markdown",
@@ -85,10 +99,38 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 14,
    "metadata": {},
-   "outputs": [],
-   "source": []
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "los beneficios de Junio han sido de 900 millones\n"
+     ]
+    }
+   ],
+   "source": [
+    "mes = \"Junio\"\n",
+    "print (\"los beneficios de %s han sido de %s millones\" %(mes,beneficios))"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 15,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Los beneficios de 900 han sido de Junio millones\n"
+     ]
+    }
+   ],
+   "source": [
+    "print (\"Los beneficios de %s han sido de %s millones\" %(beneficios,mes))"
+   ]
   },
   {
    "cell_type": "markdown",
@@ -99,10 +141,21 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 16,
    "metadata": {},
-   "outputs": [],
-   "source": []
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Los beneficios de agosto han sido 900 millones\n"
+     ]
+    }
+   ],
+   "source": [
+    "mes = \"agosto\"\n",
+    "print (\"Los beneficios de\",mes, \"han sido\",beneficios,\"millones\" )"
+   ]
   },
   {
    "cell_type": "markdown",
@@ -116,24 +169,65 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 17,
    "metadata": {},
-   "outputs": [],
-   "source": []
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Esto si se ejecuta\n"
+     ]
+    }
+   ],
+   "source": [
+    "# Comentario de línea\n",
+    "# print (\"esto lo ignora\")\n",
+    "print (\"Esto si se ejecuta\")"
+   ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 18,
    "metadata": {},
-   "outputs": [],
-   "source": []
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "fin del programa\n"
+     ]
+    }
+   ],
+   "source": [
+    "print (\"fin del programa\") #esta linea indica que hemos terminado"
+   ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 19,
    "metadata": {},
-   "outputs": [],
-   "source": []
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "este print si se va a ejecutar\n"
+     ]
+    }
+   ],
+   "source": [
+    "'''\n",
+    "Comentario multilinea\n",
+    "Puedo usar varias lineas sin repetir el #\n",
+    "'''\n",
+    "\"\"\"\n",
+    "Los comentarios multilinea pueden ir entre comillas dobles \n",
+    "y tampoco se ejecutan o interpretan\n",
+    "este print (\"no se va a ejecutar)\n",
+    "\"\"\"\n",
+    "(print (\"este print si se va a ejecutar\"))"
+   ]
   },
   {
    "cell_type": "code",
@@ -161,17 +255,47 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 34,
    "metadata": {},
-   "outputs": [],
-   "source": []
+   "outputs": [
+    {
+     "ename": "NameError",
+     "evalue": "name 'ventas_noviembre' is not defined",
+     "output_type": "error",
+     "traceback": [
+      "\u001b[31m---------------------------------------------------------------------------\u001b[39m",
+      "\u001b[31mNameError\u001b[39m                                 Traceback (most recent call last)",
+      "\u001b[36mCell\u001b[39m\u001b[36m \u001b[39m\u001b[32mIn[34]\u001b[39m\u001b[32m, line 1\u001b[39m\n\u001b[32m----> \u001b[39m\u001b[32m1\u001b[39m ventas_noviembre_diciembre = \u001b[43mventas_noviembre\u001b[49m + ventas_diciembre\n\u001b[32m      2\u001b[39m ventas_noviembre = \u001b[32m100\u001b[39m\n\u001b[32m      3\u001b[39m ventas_diciembre = \u001b[32m150\u001b[39m\n",
+      "\u001b[31mNameError\u001b[39m: name 'ventas_noviembre' is not defined"
+     ]
+    }
+   ],
+   "source": [
+    "ventas_noviembre_diciembre = ventas_noviembre + ventas_diciembre\n",
+    "ventas_noviembre = 100\n",
+    "ventas_diciembre = 150"
+   ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 35,
    "metadata": {},
-   "outputs": [],
-   "source": []
+   "outputs": [
+    {
+     "ename": "NameError",
+     "evalue": "name 'ventas_noviembre_diciembre' is not defined",
+     "output_type": "error",
+     "traceback": [
+      "\u001b[31m---------------------------------------------------------------------------\u001b[39m",
+      "\u001b[31mNameError\u001b[39m                                 Traceback (most recent call last)",
+      "\u001b[36mCell\u001b[39m\u001b[36m \u001b[39m\u001b[32mIn[35]\u001b[39m\u001b[32m, line 1\u001b[39m\n\u001b[32m----> \u001b[39m\u001b[32m1\u001b[39m \u001b[43mventas_noviembre_diciembre\u001b[49m\n",
+      "\u001b[31mNameError\u001b[39m: name 'ventas_noviembre_diciembre' is not defined"
+     ]
+    }
+   ],
+   "source": [
+    "ventas_noviembre_diciembre"
+   ]
   },
   {
    "cell_type": "markdown",
@@ -182,10 +306,23 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 37,
    "metadata": {},
-   "outputs": [],
-   "source": []
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "250\n"
+     ]
+    }
+   ],
+   "source": [
+    "ventas_junio = 100\n",
+    "ventas_julio = 150\n",
+    "ventas_julio_junio = ventas_junio + ventas_julio\n",
+    "print (ventas_julio_junio)"
+   ]
   },
   {
    "cell_type": "markdown",
@@ -197,17 +334,47 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 38,
    "metadata": {},
    "outputs": [],
-   "source": []
+   "source": [
+    "altura = 180; peso = 75"
+   ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 39,
    "metadata": {},
-   "outputs": [],
-   "source": []
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "75 180\n"
+     ]
+    }
+   ],
+   "source": [
+    "print (peso, altura)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 41,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "12 23 45\n"
+     ]
+    }
+   ],
+   "source": [
+    "x,y,z = 12, 23, 45\n",
+    "print (x,y,z)"
+   ]
   },
   {
    "cell_type": "markdown",
@@ -223,10 +390,26 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 42,
    "metadata": {},
-   "outputs": [],
-   "source": []
+   "outputs": [
+    {
+     "ename": "NameError",
+     "evalue": "name 'altura' is not defined",
+     "output_type": "error",
+     "traceback": [
+      "\u001b[31m---------------------------------------------------------------------------\u001b[39m",
+      "\u001b[31mNameError\u001b[39m                                 Traceback (most recent call last)",
+      "\u001b[36mCell\u001b[39m\u001b[36m \u001b[39m\u001b[32mIn[42]\u001b[39m\u001b[32m, line 3\u001b[39m\n\u001b[32m      1\u001b[39m altura = \u001b[32m185\u001b[39m\n\u001b[32m      2\u001b[39m \u001b[38;5;28;01mdel\u001b[39;00m altura\n\u001b[32m----> \u001b[39m\u001b[32m3\u001b[39m \u001b[38;5;28mprint\u001b[39m (\u001b[43maltura\u001b[49m)\n",
+      "\u001b[31mNameError\u001b[39m: name 'altura' is not defined"
+     ]
+    }
+   ],
+   "source": [
+    "altura = 185\n",
+    "del altura\n",
+    "print (altura)"
+   ]
   },
   {
    "cell_type": "code",
@@ -238,7 +421,7 @@
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "Python 3 (ipykernel)",
+   "display_name": "venv",
    "language": "python",
    "name": "python3"
   },
@@ -252,7 +435,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.12.6"
+   "version": "3.12.10"
   },
   "nbTranslate": {
    "displayLangs": [
