--- a/01_Programacion_Basica/Sprint_01/Unidad_02_Python_I/01_Workout/03_Tipos_de_datos_alumno_wtoc.ipynb
+++ b/01_Programacion_Basica/Sprint_01/Unidad_02_Python_I/01_Workout/03_Tipos_de_datos_alumno_wtoc.ipynb
@@ -67,10 +67,24 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 2,
    "metadata": {},
-   "outputs": [],
-   "source": []
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "int"
+      ]
+     },
+     "execution_count": 2,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "numero = 22\n",
+    "type (numero)"
+   ]
   },
   {
    "cell_type": "markdown",
@@ -81,10 +95,21 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 4,
    "metadata": {},
-   "outputs": [],
-   "source": []
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "<class 'float'>\n"
+     ]
+    }
+   ],
+   "source": [
+    "numero_real = 22.0\n",
+    "print(type (numero_real))"
+   ]
   },
   {
    "cell_type": "markdown",
@@ -95,10 +120,24 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 6,
    "metadata": {},
-   "outputs": [],
-   "source": []
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "float"
+      ]
+     },
+     "execution_count": 6,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "numero_real_decimales = 22.45123\n",
+    "type (numero_real_decimales)"
+   ]
   },
   {
    "cell_type": "markdown",
@@ -139,6 +178,103 @@
    ]
   },
   {
+   "cell_type": "code",
+   "execution_count": 10,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "sumas/restas\n",
+      "3\n",
+      "3.0\n",
+      "-1.0\n"
+     ]
+    }
+   ],
+   "source": [
+    "print(\"sumas/restas\")\n",
+    "print (1 + 2)\n",
+    "print (1.0 + 2)\n",
+    "print (1.0 - 2)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 11,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "mult y divisiones\n",
+      "4\n",
+      "4.0\n",
+      "1.0\n"
+     ]
+    }
+   ],
+   "source": [
+    "print(\"mult y divisiones\")\n",
+    "print (2*2)\n",
+    "print (2.0*2)\n",
+    "print (2/2)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 17,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "resto y cociente de división\n",
+      "3\n",
+      "3.3333333333333335\n",
+      "3\n",
+      "1\n"
+     ]
+    }
+   ],
+   "source": [
+    "print (\"resto y cociente de división\")\n",
+    "print (10//3)\n",
+    "print (10/3)\n",
+    "print (int(10/3))\n",
+    "print (10 % 3)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 24,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "¿Es n par?\n",
+      "el resto es 1\n",
+      "es impar\n"
+     ]
+    }
+   ],
+   "source": [
+    "n = 23\n",
+    "print (\"¿Es n par?\")\n",
+    "resto = n%2\n",
+    "print (\"el resto es\", resto)\n",
+    "if resto == 0:\n",
+    "    print (\"es par\")\n",
+    "else:\n",
+    "    print (\"es impar\")\n"
+   ]
+  },
+  {
    "cell_type": "markdown",
    "metadata": {},
    "source": [
@@ -151,10 +287,27 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 26,
    "metadata": {},
-   "outputs": [],
-   "source": []
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "esto es una variable tipo string\n",
+      "esto es una variable string con cadena simple \n"
+     ]
+    }
+   ],
+   "source": [
+    "#con comillas dobles\n",
+    "cadena = \"esto es una variable tipo string\"\n",
+    "\n",
+    "#con comillas simples\n",
+    "cadena2 = 'esto es una variable string con cadena simple ' \n",
+    "print (cadena)\n",
+    "print(cadena2)"
+   ]
   },
   {
    "cell_type": "markdown",
@@ -165,10 +318,24 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 29,
    "metadata": {},
-   "outputs": [],
-   "source": []
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "string con 'simples'\n",
+      "string con \"dobles\"\n",
+      "string con \"simples o dobles\"\n"
+     ]
+    }
+   ],
+   "source": [
+    "print(\"string con 'simples'\")\n",
+    "print('string con \"dobles\"')\n",
+    "print(\"string con \\\"simples o dobles\\\"\")"
+   ]
   },
   {
    "cell_type": "markdown",
@@ -179,10 +346,42 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 30,
    "metadata": {},
-   "outputs": [],
-   "source": []
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Primera linea\n",
+      "Segunda Linea\n",
+      "\tTercera Linea, tabulada\n"
+     ]
+    }
+   ],
+   "source": [
+    "print (\"Primera linea\\nSegunda Linea\\n\\tTercera Linea, tabulada\")"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 31,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "primera lines\n",
+      "Segunda Linea\n",
+      "\tTercera linea, tabulada\n"
+     ]
+    }
+   ],
+   "source": [
+    "mi_string = \"primera lines\\nSegunda Linea\\n\\tTercera linea, tabulada\"\n",
+    "print (mi_string)"
+   ]
   },
   {
    "cell_type": "markdown",
@@ -193,10 +392,46 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 36,
    "metadata": {},
-   "outputs": [],
-   "source": []
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Antonia Scot\n"
+     ]
+    }
+   ],
+   "source": [
+    "nombre = \"Antonia\"\n",
+    "apellido = \"Scot\"\n",
+    "nombre_completo = nombre +  \" \" + apellido\n",
+    "print(nombre_completo)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 37,
+   "metadata": {},
+   "outputs": [
+    {
+     "ename": "TypeError",
+     "evalue": "can only concatenate str (not \"int\") to str",
+     "output_type": "error",
+     "traceback": [
+      "\u001b[31m---------------------------------------------------------------------------\u001b[39m",
+      "\u001b[31mTypeError\u001b[39m                                 Traceback (most recent call last)",
+      "\u001b[36mCell\u001b[39m\u001b[36m \u001b[39m\u001b[32mIn[37]\u001b[39m\u001b[32m, line 3\u001b[39m\n\u001b[32m      1\u001b[39m esto_es_una_prueba = \u001b[33m\"\u001b[39m\u001b[33mEstamos jugando\u001b[39m\u001b[33m\"\u001b[39m\n\u001b[32m      2\u001b[39m un_entero = \u001b[32m100\u001b[39m\n\u001b[32m----> \u001b[39m\u001b[32m3\u001b[39m \u001b[38;5;28mprint\u001b[39m (\u001b[43mesto_es_una_prueba\u001b[49m\u001b[43m \u001b[49m\u001b[43m+\u001b[49m\u001b[43m \u001b[49m\u001b[43mun_entero\u001b[49m)\n",
+      "\u001b[31mTypeError\u001b[39m: can only concatenate str (not \"int\") to str"
+     ]
+    }
+   ],
+   "source": [
+    "esto_es_una_prueba = \"Estamos jugando\"\n",
+    "un_entero = 100\n",
+    "print (esto_es_una_prueba + un_entero)"
+   ]
   },
   {
    "cell_type": "markdown",
@@ -210,10 +445,83 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 39,
    "metadata": {},
-   "outputs": [],
-   "source": []
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "True"
+      ]
+     },
+     "execution_count": 39,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "True "
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 41,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "<class 'bool'>\n"
+     ]
+    }
+   ],
+   "source": [
+    "ya_se_de_python = False\n",
+    "print (type (ya_se_de_python))"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 42,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "False"
+      ]
+     },
+     "execution_count": 42,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "dinerito = 5\n",
+    "dinerito >=15"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 43,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "True\n",
+      "<class 'bool'>\n"
+     ]
+    }
+   ],
+   "source": [
+    "dinerito = 15\n",
+    "cond_1 = dinerito >=15\n",
+    "print (cond_1)\n",
+    "print(type(cond_1))"
+   ]
   },
   {
    "cell_type": "markdown",
@@ -237,22 +545,59 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 45,
    "metadata": {},
-   "outputs": [],
-   "source": []
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "<class 'float'>\n"
+     ]
+    }
+   ],
+   "source": [
+    "print(type(1.0))"
+   ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 48,
    "metadata": {},
-   "outputs": [],
-   "source": []
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "<class 'int'>\n"
+     ]
+    }
+   ],
+   "source": [
+    "print(type(-74))"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 50,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "<class 'bool'>\n"
+     ]
+    }
+   ],
+   "source": [
+    "print(type(cond_1))"
+   ]
   }
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "Python 3 (ipykernel)",
+   "display_name": "venv",
    "language": "python",
    "name": "python3"
   },
@@ -266,7 +611,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.12.6"
+   "version": "3.12.10"
   }
  },
  "nbformat": 4,
