--- a/01_Programacion_Basica/Sprint_01/Unidad_02_Python_I/01_Workout/04_Conversion_Tipos_e_Input_wtoc.ipynb
+++ b/01_Programacion_Basica/Sprint_01/Unidad_02_Python_I/01_Workout/04_Conversion_Tipos_e_Input_wtoc.ipynb
@@ -59,10 +59,28 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 5,
    "metadata": {},
-   "outputs": [],
-   "source": []
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "24.69\n",
+      "<class 'float'>\n",
+      "24\n",
+      "<class 'int'>\n"
+     ]
+    }
+   ],
+   "source": [
+    "numreal = 24.69\n",
+    "print (numreal)\n",
+    "print(type(numreal))\n",
+    "numentero = int(numreal)\n",
+    "print(numentero)\n",
+    "print(type(numentero))\n"
+   ]
   },
   {
    "cell_type": "markdown",
@@ -75,12 +93,29 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 12,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "24.69\n",
+      "24.7\n",
+      "25.0\n",
+      "<class 'float'>\n",
+      "<class 'int'>\n"
+     ]
+    }
+   ],
    "source": [
     "# Esta funcion tiene dos argumentos: el número y la cantidad de decimales que queremos conservar.\n",
-    "# Veremos funciones más adelante.\n"
+    "# Veremos funciones más adelante.\n",
+    "print(numreal)\n",
+    "print(round(numreal,1))\n",
+    "print(round(numreal,0))\n",
+    "print(type(round(numreal,0)))\n",
+    "print(type(int(numreal)))"
    ]
   },
   {
@@ -92,10 +127,43 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 16,
    "metadata": {},
-   "outputs": [],
-   "source": []
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "24.69 su tipo <class 'str'>\n"
+     ]
+    }
+   ],
+   "source": [
+    "numreal = 24.69\n",
+    "numentero=12\n",
+    "real_str = str (numreal)\n",
+    "entero_str = str(numentero)\n",
+    "print (real_str,\"su tipo\",type(real_str))\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 17,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "36.69\n",
+      "24.6912\n"
+     ]
+    }
+   ],
+   "source": [
+    "print(numreal+numentero)\n",
+    "print(real_str + entero_str )"
+   ]
   },
   {
    "cell_type": "markdown",
@@ -106,10 +174,62 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 21,
    "metadata": {},
-   "outputs": [],
-   "source": []
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "98 <class 'str'>\n",
+      "98 <class 'int'>\n"
+     ]
+    },
+    {
+     "ename": "TypeError",
+     "evalue": "float() argument must be a string or a real number, not 'tuple'",
+     "output_type": "error",
+     "traceback": [
+      "\u001b[31m---------------------------------------------------------------------------\u001b[39m",
+      "\u001b[31mTypeError\u001b[39m                                 Traceback (most recent call last)",
+      "\u001b[36mCell\u001b[39m\u001b[36m \u001b[39m\u001b[32mIn[21]\u001b[39m\u001b[32m, line 6\u001b[39m\n\u001b[32m      4\u001b[39m \u001b[38;5;28mprint\u001b[39m(mi_entero, \u001b[38;5;28mtype\u001b[39m(mi_entero))\n\u001b[32m      5\u001b[39m mi_cadena_real=\u001b[32m98\u001b[39m,\u001b[32m93\u001b[39m\n\u001b[32m----> \u001b[39m\u001b[32m6\u001b[39m mi_real=\u001b[38;5;28;43mfloat\u001b[39;49m\u001b[43m(\u001b[49m\u001b[43mmi_cadena_real\u001b[49m\u001b[43m)\u001b[49m\n",
+      "\u001b[31mTypeError\u001b[39m: float() argument must be a string or a real number, not 'tuple'"
+     ]
+    }
+   ],
+   "source": [
+    "mi_cadena = \"98\"\n",
+    "mi_entero = int(mi_cadena)\n",
+    "print(mi_cadena, type(mi_cadena))\n",
+    "print(mi_entero, type(mi_entero))\n",
+    "mi_cadena_real=98,93\n",
+    "mi_real=float(mi_cadena_real)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 23,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "98 <class 'str'>\n",
+      "98 <class 'int'>\n",
+      "98.93 <class 'float'>\n"
+     ]
+    }
+   ],
+   "source": [
+    "mi_cadena = \"98\"\n",
+    "mi_entero = int(mi_cadena)\n",
+    "print(mi_cadena, type(mi_cadena))\n",
+    "print(mi_entero, type(mi_entero))\n",
+    "mi_cadena_real=98.93\n",
+    "mi_real=float(mi_cadena_real)\n",
+    "print(mi_real, type(mi_real))"
+   ]
   },
   {
    "cell_type": "markdown",
@@ -120,10 +240,39 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 24,
    "metadata": {},
-   "outputs": [],
-   "source": []
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "True <class 'bool'>\n"
+     ]
+    }
+   ],
+   "source": [
+    "booleano = bool(123)\n",
+    "print(booleano,type(booleano))"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 25,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "False <class 'bool'>\n"
+     ]
+    }
+   ],
+   "source": [
+    "booleano = bool(0)\n",
+    "print (booleano, type (booleano))"
+   ]
   },
   {
    "cell_type": "markdown",
@@ -136,10 +285,43 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 27,
    "metadata": {},
-   "outputs": [],
-   "source": []
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "False <class 'bool'>\n",
+      "True <class 'bool'>\n"
+     ]
+    }
+   ],
+   "source": [
+    "booleano=bool(\"\")\n",
+    "booleano2=bool(\"otro tipo de booleano\")\n",
+    "print(booleano,type(booleano))\n",
+    "print(booleano2,type(booleano2))"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 28,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "False True\n"
+     ]
+    }
+   ],
+   "source": [
+    "bool_str=str(booleano)\n",
+    "bool_2_str=str(booleano2)\n",
+    "print(bool_str,bool_2_str)"
+   ]
   },
   {
    "cell_type": "markdown",
@@ -163,10 +345,25 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 30,
    "metadata": {},
-   "outputs": [],
-   "source": []
+   "outputs": [
+    {
+     "ename": "ValueError",
+     "evalue": "could not convert string to float: '28,73'",
+     "output_type": "error",
+     "traceback": [
+      "\u001b[31m---------------------------------------------------------------------------\u001b[39m",
+      "\u001b[31mValueError\u001b[39m                                Traceback (most recent call last)",
+      "\u001b[36mCell\u001b[39m\u001b[36m \u001b[39m\u001b[32mIn[30]\u001b[39m\u001b[32m, line 2\u001b[39m\n\u001b[32m      1\u001b[39m real_str=\u001b[33m\"\u001b[39m\u001b[33m28,73\u001b[39m\u001b[33m\"\u001b[39m\n\u001b[32m----> \u001b[39m\u001b[32m2\u001b[39m real = \u001b[38;5;28;43mfloat\u001b[39;49m\u001b[43m(\u001b[49m\u001b[43mreal_str\u001b[49m\u001b[43m)\u001b[49m\n",
+      "\u001b[31mValueError\u001b[39m: could not convert string to float: '28,73'"
+     ]
+    }
+   ],
+   "source": [
+    "real_str=\"28,73\"\n",
+    "real = float(real_str)"
+   ]
   },
   {
    "cell_type": "markdown",
@@ -177,10 +374,23 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 31,
    "metadata": {},
-   "outputs": [],
-   "source": []
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "'28.73'"
+      ]
+     },
+     "execution_count": 31,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "real_str.replace(\",\",\".\")"
+   ]
   },
   {
    "cell_type": "markdown",
@@ -191,10 +401,45 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 34,
    "metadata": {},
-   "outputs": [],
-   "source": []
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "str"
+      ]
+     },
+     "execution_count": 34,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "nuevo_str=real_str.replace(\",\",\".\")\n",
+    "type(nuevo_str)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 35,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "float"
+      ]
+     },
+     "execution_count": 35,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "real = float(nuevo_str)\n",
+    "type(real)"
+   ]
   },
   {
    "cell_type": "markdown",
@@ -226,17 +471,40 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 36,
    "metadata": {},
    "outputs": [],
-   "source": []
+   "source": [
+    "primer_input=input(\"escribeme algo\")"
+   ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 38,
    "metadata": {},
-   "outputs": [],
-   "source": []
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "hola\n"
+     ]
+    },
+    {
+     "data": {
+      "text/plain": [
+       "str"
+      ]
+     },
+     "execution_count": 38,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "print(primer_input)\n",
+    "type(primer_input)"
+   ]
   },
   {
    "cell_type": "markdown",
@@ -249,10 +517,24 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 39,
    "metadata": {},
-   "outputs": [],
-   "source": []
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Encantado de conocerte Javier\n",
+      "coincido\n"
+     ]
+    }
+   ],
+   "source": [
+    "nombre = input (\"¿Cómo te llamas?\")\n",
+    "print (\"Encantado de conocerte\", nombre)\n",
+    "preferencias = input (\"Y, ¿que te parece este magnífico video?\")\n",
+    "print (\"coincido\")"
+   ]
   },
   {
    "cell_type": "markdown",
@@ -266,10 +548,82 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 42,
    "metadata": {},
-   "outputs": [],
-   "source": []
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "None\n",
+      "<class 'NoneType'>\n"
+     ]
+    }
+   ],
+   "source": [
+    "print(None )\n",
+    "print(type (None))"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 43,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "False"
+      ]
+     },
+     "execution_count": 43,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "\"\" == None"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 44,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "False"
+      ]
+     },
+     "execution_count": 44,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "0 == None"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 45,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "False"
+      ]
+     },
+     "execution_count": 45,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "False == None"
+   ]
   },
   {
    "cell_type": "markdown",
@@ -316,10 +670,40 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 46,
    "metadata": {},
-   "outputs": [],
-   "source": []
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "The Zen of Python, by Tim Peters\n",
+      "\n",
+      "Beautiful is better than ugly.\n",
+      "Explicit is better than implicit.\n",
+      "Simple is better than complex.\n",
+      "Complex is better than complicated.\n",
+      "Flat is better than nested.\n",
+      "Sparse is better than dense.\n",
+      "Readability counts.\n",
+      "Special cases aren't special enough to break the rules.\n",
+      "Although practicality beats purity.\n",
+      "Errors should never pass silently.\n",
+      "Unless explicitly silenced.\n",
+      "In the face of ambiguity, refuse the temptation to guess.\n",
+      "There should be one-- and preferably only one --obvious way to do it.\n",
+      "Although that way may not be obvious at first unless you're Dutch.\n",
+      "Now is better than never.\n",
+      "Although never is often better than *right* now.\n",
+      "If the implementation is hard to explain, it's a bad idea.\n",
+      "If the implementation is easy to explain, it may be a good idea.\n",
+      "Namespaces are one honking great idea -- let's do more of those!\n"
+     ]
+    }
+   ],
+   "source": [
+    "import this\n"
+   ]
   },
   {
    "cell_type": "code",
@@ -338,7 +722,7 @@
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "Python 3 (ipykernel)",
+   "display_name": "venv",
    "language": "python",
    "name": "python3"
   },
@@ -352,7 +736,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.12.6"
+   "version": "3.12.10"
   }
  },
  "nbformat": 4,
