--- a/01_Programacion_Basica/Sprint_01/Unidad_02_Python_I/01_Workout/05_Operaciones_Aritmeticas_Comparativas_alumno_wtoc.ipynb
+++ b/01_Programacion_Basica/Sprint_01/Unidad_02_Python_I/01_Workout/05_Operaciones_Aritmeticas_Comparativas_alumno_wtoc.ipynb
@@ -70,10 +70,32 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 4,
    "metadata": {},
-   "outputs": [],
-   "source": []
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "24.0\n",
+      "<class 'float'>\n",
+      "144.0\n",
+      "8916100448256.0\n",
+      "1.0 0.0 1.0\n"
+     ]
+    }
+   ],
+   "source": [
+    "variableentera = 12\n",
+    "variablereal = 12.00\n",
+    "suma = variableentera + variablereal\n",
+    "print (suma)\n",
+    "print (type(suma))\n",
+    "multiplicacion =variableentera * variablereal\n",
+    "print (multiplicacion)\n",
+    "print(variableentera**variablereal)\n",
+    "print(variableentera//variablereal,variableentera%variablereal,variableentera/variablereal)\n"
+   ]
   },
   {
    "cell_type": "markdown",
@@ -85,9 +107,31 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 5,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Conmutativa\n",
+      "6\n",
+      "6\n",
+      "\n",
+      "Asociativa\n",
+      "30\n",
+      "30\n",
+      "\n",
+      "Distributiva\n",
+      "16\n",
+      "16\n",
+      "\n",
+      "El Orden de operaciones se mantiene. Siempre podemos usar paréntesis\n",
+      "50\n",
+      "1.7272727272727273\n"
+     ]
+    }
+   ],
    "source": [
     "print(\"Conmutativa\")\n",
     "print(2 * 3)\n",
@@ -123,10 +167,25 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 9,
    "metadata": {},
-   "outputs": [],
-   "source": []
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "5.0\n",
+      "1.0\n",
+      "123.45\n"
+     ]
+    }
+   ],
+   "source": [
+    "import math\n",
+    "print (math.sqrt(25))\n",
+    "print (math.cos(0))\n",
+    "print(math.fabs(-123.45))"
+   ]
   },
   {
    "cell_type": "markdown",
@@ -157,10 +216,24 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 10,
    "metadata": {},
-   "outputs": [],
-   "source": []
+   "outputs": [
+    {
+     "ename": "ZeroDivisionError",
+     "evalue": "division by zero",
+     "output_type": "error",
+     "traceback": [
+      "\u001b[31m---------------------------------------------------------------------------\u001b[39m",
+      "\u001b[31mZeroDivisionError\u001b[39m                         Traceback (most recent call last)",
+      "\u001b[36mCell\u001b[39m\u001b[36m \u001b[39m\u001b[32mIn[10]\u001b[39m\u001b[32m, line 1\u001b[39m\n\u001b[32m----> \u001b[39m\u001b[32m1\u001b[39m \u001b[32;43m4\u001b[39;49m\u001b[43m/\u001b[49m\u001b[32;43m0\u001b[39;49m\n",
+      "\u001b[31mZeroDivisionError\u001b[39m: division by zero"
+     ]
+    }
+   ],
+   "source": [
+    "4/0"
+   ]
   },
   {
    "cell_type": "code",
@@ -174,10 +247,24 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 11,
    "metadata": {},
-   "outputs": [],
-   "source": []
+   "outputs": [
+    {
+     "ename": "ValueError",
+     "evalue": "math domain error",
+     "output_type": "error",
+     "traceback": [
+      "\u001b[31m---------------------------------------------------------------------------\u001b[39m",
+      "\u001b[31mValueError\u001b[39m                                Traceback (most recent call last)",
+      "\u001b[36mCell\u001b[39m\u001b[36m \u001b[39m\u001b[32mIn[11]\u001b[39m\u001b[32m, line 1\u001b[39m\n\u001b[32m----> \u001b[39m\u001b[32m1\u001b[39m \u001b[43mmath\u001b[49m\u001b[43m.\u001b[49m\u001b[43msqrt\u001b[49m\u001b[43m(\u001b[49m\u001b[43m-\u001b[49m\u001b[32;43m3\u001b[39;49m\u001b[43m)\u001b[49m\n",
+      "\u001b[31mValueError\u001b[39m: math domain error"
+     ]
+    }
+   ],
+   "source": [
+    "math.sqrt(-3)"
+   ]
   },
   {
    "cell_type": "markdown",
@@ -204,10 +291,28 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 13,
    "metadata": {},
-   "outputs": [],
-   "source": []
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "1\n",
+      "False\n",
+      "1\n"
+     ]
+    }
+   ],
+   "source": [
+    "#asignacion\n",
+    "asign = 1\n",
+    "print (asign)\n",
+    "\n",
+    "#asign\n",
+    "print (asign==5)\n",
+    "print (asign)"
+   ]
   },
   {
    "cell_type": "markdown",
@@ -218,10 +323,28 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 17,
    "metadata": {},
-   "outputs": [],
-   "source": []
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "False\n",
+      "True\n",
+      "True\n",
+      "True\n",
+      "False\n"
+     ]
+    }
+   ],
+   "source": [
+    "print(\"AAA\"==\"BBB\")\n",
+    "print(\"AAA\"==\"AAA\")\n",
+    "print(93>12)\n",
+    "print(1==1)\n",
+    "print(93<=12)"
+   ]
   },
   {
    "cell_type": "markdown",
@@ -245,10 +368,22 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 19,
    "metadata": {},
-   "outputs": [],
-   "source": []
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "False\n",
+      "False\n"
+     ]
+    }
+   ],
+   "source": [
+    "print (1 == \"1\")\n",
+    "print (\"Hola\"== True)"
+   ]
   },
   {
    "cell_type": "code",
@@ -261,10 +396,24 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 20,
    "metadata": {},
-   "outputs": [],
-   "source": []
+   "outputs": [
+    {
+     "ename": "TypeError",
+     "evalue": "'>=' not supported between instances of 'str' and 'int'",
+     "output_type": "error",
+     "traceback": [
+      "\u001b[31m---------------------------------------------------------------------------\u001b[39m",
+      "\u001b[31mTypeError\u001b[39m                                 Traceback (most recent call last)",
+      "\u001b[36mCell\u001b[39m\u001b[36m \u001b[39m\u001b[32mIn[20]\u001b[39m\u001b[32m, line 1\u001b[39m\n\u001b[32m----> \u001b[39m\u001b[32m1\u001b[39m \u001b[38;5;28mprint\u001b[39m(\u001b[33;43m\"\u001b[39;49m\u001b[33;43m17\u001b[39;49m\u001b[33;43m\"\u001b[39;49m\u001b[43m>\u001b[49m\u001b[43m=\u001b[49m\u001b[32;43m23\u001b[39;49m)\n",
+      "\u001b[31mTypeError\u001b[39m: '>=' not supported between instances of 'str' and 'int'"
+     ]
+    }
+   ],
+   "source": [
+    "print(\"17\">=23)"
+   ]
   },
   {
    "cell_type": "code",
@@ -276,7 +425,7 @@
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "Python 3 (ipykernel)",
+   "display_name": "venv",
    "language": "python",
    "name": "python3"
   },
@@ -290,7 +439,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.12.6"
+   "version": "3.12.10"
   }
  },
  "nbformat": 4,
