--- a/01_Programacion_Basica/Sprint_01/Unidad_02_Python_I/01_Workout/06_Operaciones_Booleanas_alumno_wtoc.ipynb
+++ b/01_Programacion_Basica/Sprint_01/Unidad_02_Python_I/01_Workout/06_Operaciones_Booleanas_alumno_wtoc.ipynb
@@ -60,7 +60,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -92,12 +92,27 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 4,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "True False False\n",
+      "False\n"
+     ]
+    }
+   ],
    "source": [
     "# Primero, calculamos el valor de estas condiciones por separado\n",
-    "# para el primer ordenador\n"
+    "# para el primer ordenador\n",
+    "condram1 = (ram1 ==16 or ram1 == 32 or ram1 == 64)\n",
+    "conprocess1 = (process1 == \"i3\" and disco1 == 500)\n",
+    "conprecio1 = (precio1 < 800)\n",
+    "contotal1 = condram1 and conprocess1 and conprecio1\n",
+    "print (condram1,conprocess1,conprecio1)\n",
+    "print (contotal1)\n"
    ]
   },
   {
@@ -118,9 +133,32 @@
    "cell_type": "code",
    "execution_count": null,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Ordenador 2 = False\n",
+      "True True True\n",
+      "Ordenador 3= True\n"
+     ]
+    }
+   ],
    "source": [
-    "# Calculamos las condiciones para los otros ordenadores"
+    "# Calculamos las condiciones para los otros ordenadores\n",
+    "contotal2 = (ram2 ==16 or ram2 == 32 or ram2 == 64)\\\n",
+    "and (process2 == \"i3\" and disco2 == 500) and (precio2 < 800)\n",
+    "\n",
+    "\n",
+    "print (\"Ordenador 2 =\",contotal2)\n",
+    "\n",
+    "\n",
+    "condram3 = (ram3 ==16 or ram3 == 32 or ram3 == 64)\n",
+    "conprocess3 = (process3 == \"i3\" and disco3 == 500)\n",
+    "conprecio3 = (precio3 < 800)\n",
+    "contotal3 = condram3 and conprocess3 and conprecio3\n",
+    "print (condram3,conprocess3,conprecio3)\n",
+    "print (\"Ordenador 3=\",contotal3)"
    ]
   },
   {
@@ -149,7 +187,7 @@
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "Python 3 (ipykernel)",
+   "display_name": "venv",
    "language": "python",
    "name": "python3"
   },
@@ -163,7 +201,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.12.6"
+   "version": "3.12.10"
   }
  },
  "nbformat": 4,
