--- a/01_Programacion_Basica/Sprint_01/Unidad_02_Python_I/01_Workout/07_Funciones_builtin_y_Metodos_alumno_wtoc.ipynb
+++ b/01_Programacion_Basica/Sprint_01/Unidad_02_Python_I/01_Workout/07_Funciones_builtin_y_Metodos_alumno_wtoc.ipynb
@@ -67,14 +67,42 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 1,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "33\n",
+      "9\n"
+     ]
+    }
+   ],
    "source": [
     "# Len se usa para calcular la longitud de una variable. Ya veras que lo usaremos mucho en colecciones\n",
+    "print(len(\"esto es una cadena de longitud...\"))\n",
     "\n",
-    "\n",
-    "# Funcion max. Tiene tantos argumentos como cantidad de números entre los cuales queramos sacar su valor máximo.\n"
+    "# Funcion max. Tiene tantos argumentos como cantidad de números entre los cuales queramos sacar su valor máximo.\n",
+    "print(max(1,2,3,4,5,6,7,8,9))"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 5,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "la longitud de esta cadena es **test** 29 y punto"
+     ]
+    }
+   ],
+   "source": [
+    "cadena = (\"la longitud de esta cadena es\")\n",
+    "print(cadena,len(cadena),sep = \" **test** \", end = \" y punto\")"
    ]
   },
   {
@@ -97,11 +125,44 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 16,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "STRING EN MINÚSCULAS\n",
+      "esto es un ejemplo diferente\n",
+      "esto es un ejemplo diferente\n",
+      "ctring en minúcculac\n",
+      "string en mayúsculas\n",
+      "tring en minúcula\n",
+      "['esto', 'se', 'va', 'a', 'convertir', 'en', 'una', 'lista', 'de', 'strings']\n",
+      "10\n"
+     ]
+    }
+   ],
    "source": [
-    "\n"
+    "string_ejemplo = \"string en minúsculas\"\n",
+    "#método para poner un string todo en mayúsculas\n",
+    "print(string_ejemplo.upper())\n",
+    "\n",
+    "#método para poner un string todo en minúsculas\n",
+    "print(\"ESTO ES UN EJEMPLO DIFERENTE\".lower())\n",
+    "string_ejemplo2 = \"ESTO ES UN EJEMPLO DIFERENTE\"\n",
+    "print(string_ejemplo2.lower())\n",
+    "\n",
+    "#método para reemplazar algún carácter o varios\n",
+    "print(string_ejemplo.replace(\"s\",\"c\"))\n",
+    "print(string_ejemplo.replace(\"minúsculas\",\"mayúsculas\"))\n",
+    "print(string_ejemplo.replace(\"s\",\"\"))\n",
+    "\n",
+    "#método para convertir un string en una lista\n",
+    "print(\"esto se va a convertir en una lista de strings\".split(\" \"))\n",
+    "\n",
+    "#método para conocer la posición dentro de un string\n",
+    "print(string_ejemplo.index(\"m\"))"
    ]
   },
   {
@@ -135,13 +196,26 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 17,
    "metadata": {
     "scrolled": true
    },
-   "outputs": [],
+   "outputs": [
+    {
+     "ename": "TypeError",
+     "evalue": "replace expected at least 2 arguments, got 0",
+     "output_type": "error",
+     "traceback": [
+      "\u001b[31m---------------------------------------------------------------------------\u001b[39m",
+      "\u001b[31mTypeError\u001b[39m                                 Traceback (most recent call last)",
+      "\u001b[36mCell\u001b[39m\u001b[36m \u001b[39m\u001b[32mIn[17]\u001b[39m\u001b[32m, line 2\u001b[39m\n\u001b[32m      1\u001b[39m \u001b[38;5;66;03m# Cuando un método necesita ciertos argumentos, y no se los proporcionamos\u001b[39;00m\n\u001b[32m----> \u001b[39m\u001b[32m2\u001b[39m \u001b[43mstring_ejemplo\u001b[49m\u001b[43m.\u001b[49m\u001b[43mreplace\u001b[49m\u001b[43m(\u001b[49m\u001b[43m)\u001b[49m\n",
+      "\u001b[31mTypeError\u001b[39m: replace expected at least 2 arguments, got 0"
+     ]
+    }
+   ],
    "source": [
-    "# Cuando un método necesita ciertos argumentos, y no se los proporcionamos\n"
+    "# Cuando un método necesita ciertos argumentos, y no se los proporcionamos\n",
+    "string_ejemplo.replace()"
    ]
   },
   {
@@ -161,7 +235,7 @@
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "Python 3 (ipykernel)",
+   "display_name": "venv",
    "language": "python",
    "name": "python3"
   },
@@ -175,7 +249,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.12.6"
+   "version": "3.12.10"
   }
  },
  "nbformat": 4,
