--- a/01_Programacion_Basica/Sprint_01/Unidad_02_Python_I/01_Workout/08_Listas_alumno_wtoc.ipynb
+++ b/01_Programacion_Basica/Sprint_01/Unidad_02_Python_I/01_Workout/08_Listas_alumno_wtoc.ipynb
@@ -52,17 +52,96 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 1,
    "metadata": {},
-   "outputs": [],
-   "source": []
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "[1, 3, 5, 6]\n",
+      "<class 'list'>\n"
+     ]
+    }
+   ],
+   "source": [
+    "# lista de números \n",
+    "números = [1, 3, 5, 6]\n",
+    "print(números)\n",
+    "print(type(números))"
+   ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 4,
    "metadata": {},
-   "outputs": [],
-   "source": []
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "['Esto', 'es', 'una', 'lista']\n",
+      "[True, False, True, True, False]\n"
+     ]
+    }
+   ],
+   "source": [
+    "#lista de strings\n",
+    "stringa = [\"Esto\", \"es\", \"una\", \"lista\"]\n",
+    "print (stringa)\n",
+    "\n",
+    "#lista de booleanos \n",
+    "booleanos = [True, False, not False, True or False, False and False]\n",
+    "print(booleanos)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 10,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "['Esto es', 12, -34.5, True]\n",
+      "['gola', [12, 3], True]\n",
+      "3\n"
+     ]
+    }
+   ],
+   "source": [
+    "#lista de tipos mezclados\n",
+    "mix = [\"Esto es\", 12, -34.5, True]\n",
+    "print (mix)\n",
+    "\n",
+    "#Listas de listas\n",
+    "listas = [\"gola\",[12,3], True]\n",
+    "print (listas)\n",
+    "print(len(listas))\n",
+    "\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 11,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "['Esto es', 12, -34.5, True, 'gola', [12, 3], True]\n",
+      "<class 'list'>\n"
+     ]
+    }
+   ],
+   "source": [
+    "concatenacion = mix + listas\n",
+    "print(concatenacion)\n",
+    "print(type(concatenacion))\n",
+    "\n"
+   ]
   },
   {
    "cell_type": "markdown",
@@ -75,10 +154,23 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 12,
    "metadata": {},
-   "outputs": [],
-   "source": []
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "list"
+      ]
+     },
+     "execution_count": 12,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "type(mix)"
+   ]
   },
   {
    "cell_type": "markdown",
@@ -89,10 +181,23 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 13,
    "metadata": {},
-   "outputs": [],
-   "source": []
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "4"
+      ]
+     },
+     "execution_count": 13,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "len(mix)"
+   ]
   },
   {
    "cell_type": "markdown",
@@ -107,8 +212,21 @@
    "cell_type": "code",
    "execution_count": null,
    "metadata": {},
-   "outputs": [],
-   "source": []
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "esto\n",
+      "patata\n"
+     ]
+    }
+   ],
+   "source": [
+    "lista_ejemplo = [\"esto\", 2, 3, \"patata\"]\n",
+    "print(lista_ejemplo[0])\n",
+    "print(lista_ejemplo[-1])\n"
+   ]
   },
   {
    "cell_type": "markdown",
@@ -124,8 +242,46 @@
    "cell_type": "code",
    "execution_count": null,
    "metadata": {},
-   "outputs": [],
-   "source": []
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "['Física', 'Química', 'Matemáticas', 'Literatura', 'Filosofía']\n",
+      "['Física', 'Gimnasia', 'Química', 'Matemáticas', 'Literatura', 'Filosofía']\n",
+      "['Física', 'Química', 'Matemáticas', 'Literatura', 'Filosofía']\n",
+      "['Física', 'Química', 'Matemáticas', 'Literatura']\n",
+      "['Física', 'Literatura', 'Matemáticas', 'Química']\n"
+     ]
+    }
+   ],
+   "source": [
+    "asignaturas = [\"Física\", \"Química\", \"Matemáticas\", \"Literatura\"]\n",
+    "\n",
+    "# Añadir elemenos a una lista\n",
+    "asignaturas.append(\"Filosofía\")\n",
+    "print(asignaturas)\n",
+    "\n",
+    "# Añadir elementos en una posición determinada\n",
+    "asignaturas.insert(1,\"Gimnasia\")\n",
+    "print(asignaturas)\n",
+    "\n",
+    "# Quitar elementos\n",
+    "#asignaturas.clear()\n",
+    "#print(asignaturas)\n",
+    "\n",
+    "# Quitar un elemento según su posición\n",
+    "asignaturas.pop(1)\n",
+    "print(asignaturas)\n",
+    "\n",
+    "# Quitar un elemento por su valor\n",
+    "asignaturas.remove(\"Filosofía\")\n",
+    "print(asignaturas)\n",
+    "\n",
+    "# Ordenar la lista en orden alfabético\n",
+    "asignaturas.sort()\n",
+    "print(asignaturas)"
+   ]
   },
   {
    "cell_type": "code",
@@ -144,7 +300,7 @@
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "Python 3 (ipykernel)",
+   "display_name": "venv",
    "language": "python",
    "name": "python3"
   },
@@ -158,7 +314,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.12.6"
+   "version": "3.12.10"
   }
  },
  "nbformat": 4,
