--- a/01_Programacion_Basica/Sprint_01/Unidad_02_Python_I/02_Ejercicios_Workout/09_Ejercicios_Python_Basisc_I_1.ipynb
+++ b/01_Programacion_Basica/Sprint_01/Unidad_02_Python_I/02_Ejercicios_Workout/09_Ejercicios_Python_Basisc_I_1.ipynb
@@ -71,10 +71,28 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 39,
    "metadata": {},
-   "outputs": [],
-   "source": []
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "¿Por qué esta msgnífica tecnología científica,\n",
+      "          que ahorra trabajo y nos hace la vida más fácil,\n",
+      "                  nos aporta tan poca felicidad?\n",
+      "                            La respuesta es está, simplemente: porque aún no hemos aprendido a usarla con tino.\n",
+      "\"Albert Einstein\"\n"
+     ]
+    }
+   ],
+   "source": [
+    "print(\"¿Por qué esta msgnífica tecnología científica,\")\n",
+    "print(\"          que ahorra trabajo y nos hace la vida más fácil,\")\n",
+    "print(\"                  nos aporta tan poca felicidad?\")\n",
+    "print(\"                            La respuesta es está, simplemente: porque aún no hemos aprendido a usarla con tino.\")\n",
+    "print('\"Albert Einstein\"')"
+   ]
   },
   {
    "attachments": {
@@ -107,10 +125,27 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 40,
    "metadata": {},
-   "outputs": [],
-   "source": []
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "('avenida manuel azaña', 60, 'leganés', 28914)\n",
+      "la dirección es avenida manuel azaña 60 leganés 28914\n"
+     ]
+    }
+   ],
+   "source": [
+    "calle = \"avenida manuel azaña\"\n",
+    "número_calle = 60\n",
+    "población = \"leganés\"\n",
+    "código_postal = 28914\n",
+    "dirección = calle, número_calle, población, código_postal\n",
+    "print (dirección)\n",
+    "print (\"la dirección es\", calle, número_calle, población,código_postal)"
+   ]
   },
   {
    "attachments": {
@@ -140,10 +175,42 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 41,
    "metadata": {},
-   "outputs": [],
-   "source": []
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "('avenida manuel azaña', 60, 'leganés', 28914)\n",
+      "la dirección es avenida manuel azaña 60 leganés 28914\n"
+     ]
+    },
+    {
+     "data": {
+      "text/plain": [
+       "'\\nEl programa asigna valores a diferentes elementos de una dirección como son la calle, el numero y el código postal\\nposteriormente los reune todos en una variable que sigue un orden lógico y lo imprime\\nfinalmente imprime una frase conjugada en la que se indica la dirección completa antes mencionada\\n'"
+      ]
+     },
+     "execution_count": 41,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "calle = \"avenida manuel azaña\" #esta línea asigna la calle\n",
+    "número_calle = 60 #esta línea asigna el número de la calle\n",
+    "población = \"leganés\" #esta línea asigna la población\n",
+    "código_postal = 28914 #esta linea asigna el código postal\n",
+    "dirección = calle, número_calle, población, código_postal #esta linea agrupa todas las variables anteriores en una sola\n",
+    "print (dirección) #esta linea imprime la variable que agrupa al resto\n",
+    "print (\"la dirección es\", calle, número_calle, población,código_postal) #esta linea imprime la dirección completa\n",
+    "'''\n",
+    "El programa asigna valores a diferentes elementos de una dirección como son la calle, el numero y el código postal\n",
+    "posteriormente los reune todos en una variable que sigue un orden lógico y lo imprime\n",
+    "finalmente imprime una frase conjugada en la que se indica la dirección completa antes mencionada\n",
+    "'''"
+   ]
   },
   {
    "attachments": {
@@ -180,10 +247,125 @@
   },
   {
    "cell_type": "code",
+   "execution_count": 42,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "mi_variable =\"Economía\" "
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 43,
+   "metadata": {},
+   "outputs": [
+    {
+     "ename": "SyntaxError",
+     "evalue": "unterminated string literal (detected at line 1) (2439014879.py, line 1)",
+     "output_type": "error",
+     "traceback": [
+      "  \u001b[36mCell\u001b[39m\u001b[36m \u001b[39m\u001b[32mIn[43]\u001b[39m\u001b[32m, line 1\u001b[39m\n\u001b[31m    \u001b[39m\u001b[31motra_var = \"Ejercicio\u001b[39m\n               ^\n\u001b[31mSyntaxError\u001b[39m\u001b[31m:\u001b[39m unterminated string literal (detected at line 1)\n"
+     ]
+    }
+   ],
+   "source": [
+    "otra_var = \"Ejercicio"
+   ]
+  },
+  {
+   "cell_type": "code",
    "execution_count": null,
    "metadata": {},
    "outputs": [],
+   "source": [
+    "true = \"ejercicio\"\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [
+    {
+     "ename": "SyntaxError",
+     "evalue": "invalid syntax (3862710672.py, line 1)",
+     "output_type": "error",
+     "traceback": [
+      "  \u001b[36mCell\u001b[39m\u001b[36m \u001b[39m\u001b[32mIn[32]\u001b[39m\u001b[32m, line 1\u001b[39m\n\u001b[31m    \u001b[39m\u001b[31mmi variab1e = \"alpha\"\u001b[39m\n       ^\n\u001b[31mSyntaxError\u001b[39m\u001b[31m:\u001b[39m invalid syntax\n"
+     ]
+    }
+   ],
+   "source": [
+    "mi variab1e = \"alpha\""
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "exec = true"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [
+    {
+     "ename": "SyntaxError",
+     "evalue": "invalid syntax (1456137638.py, line 1)",
+     "output_type": "error",
+     "traceback": [
+      "  \u001b[36mCell\u001b[39m\u001b[36m \u001b[39m\u001b[32mIn[34]\u001b[39m\u001b[32m, line 1\u001b[39m\n\u001b[31m    \u001b[39m\u001b[31mimport = 40\u001b[39m\n           ^\n\u001b[31mSyntaxError\u001b[39m\u001b[31m:\u001b[39m invalid syntax\n"
+     ]
+    }
+   ],
+   "source": [
+    "import = 40"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
    "source": []
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "exec = true"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [
+    {
+     "ename": "SyntaxError",
+     "evalue": "invalid decimal literal (208917660.py, line 1)",
+     "output_type": "error",
+     "traceback": [
+      "  \u001b[36mCell\u001b[39m\u001b[36m \u001b[39m\u001b[32mIn[36]\u001b[39m\u001b[32m, line 1\u001b[39m\n\u001b[31m    \u001b[39m\u001b[31m81_mivariable = 30\u001b[39m\n      ^\n\u001b[31mSyntaxError\u001b[39m\u001b[31m:\u001b[39m invalid decimal literal\n"
+     ]
+    }
+   ],
+   "source": [
+    "81_mivariable = 30"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "mivariable = 6"
+   ]
   },
   {
    "attachments": {
@@ -214,15 +396,43 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 53,
    "metadata": {},
-   "outputs": [],
-   "source": []
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "12 8 60.0 % 40.0 %\n"
+     ]
+    },
+    {
+     "data": {
+      "text/plain": [
+       "(40.0, '%')"
+      ]
+     },
+     "execution_count": 53,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "victorias = 12\n",
+    "derrotas = 8\n",
+    "victorias_porcentaje = (victorias/(victorias + derrotas))*100\n",
+    "derrotas_porcentaje = (derrotas/(victorias + derrotas))*100\n",
+    "print (victorias, derrotas, victorias_porcentaje,\"%\", derrotas_porcentaje, \"%\")\n",
+    "victorias\n",
+    "derrotas\n",
+    "victorias_porcentaje\n",
+    "derrotas_porcentaje, \"%\"\n"
+   ]
   }
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "Python 3 (ipykernel)",
+   "display_name": "venv",
    "language": "python",
    "name": "python3"
   },
@@ -236,7 +446,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.12.6"
+   "version": "3.12.10"
   }
  },
  "nbformat": 4,
