--- a/01_Programacion_Basica/Sprint_01/Unidad_02_Python_I/02_Ejercicios_Workout/10_Ejercicios_Python_Basisc_I_2.ipynb
+++ b/01_Programacion_Basica/Sprint_01/Unidad_02_Python_I/02_Ejercicios_Workout/10_Ejercicios_Python_Basisc_I_2.ipynb
@@ -61,10 +61,27 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 2,
    "metadata": {},
-   "outputs": [],
-   "source": []
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "<class 'int'> <class 'float'>\n",
+      "<class 'float'>\n"
+     ]
+    }
+   ],
+   "source": [
+    "variable1 = 7\n",
+    "variable2 = 7.7\n",
+    "print (type(variable1),type(variable2))\n",
+    "variable3=variable1+variable2\n",
+    "print(type(variable3))\n",
+    "del (variable1,variable2)\n",
+    "\n"
+   ]
   },
   {
    "attachments": {
@@ -87,8 +104,21 @@
    "cell_type": "code",
    "execution_count": null,
    "metadata": {},
-   "outputs": [],
-   "source": []
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "0.6977777777777778\n"
+     ]
+    }
+   ],
+   "source": [
+    "grados=input(\"Dime los grados\")\n",
+    "\n",
+    "radianes = int(grados)*(3.14/180)\n",
+    "print(radianes)"
+   ]
   },
   {
    "attachments": {
@@ -109,8 +139,21 @@
    "cell_type": "code",
    "execution_count": null,
    "metadata": {},
-   "outputs": [],
-   "source": []
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "16\n"
+     ]
+    }
+   ],
+   "source": [
+    "altura = int(input(\"Dime la altura\"))\n",
+    "base = int(input(\"Dime la base\"))\n",
+    "area = base*altura\n",
+    "print(area)"
+   ]
   },
   {
    "attachments": {
@@ -131,8 +174,21 @@
    "cell_type": "code",
    "execution_count": null,
    "metadata": {},
-   "outputs": [],
-   "source": []
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "185.60000000000002\n"
+     ]
+    }
+   ],
+   "source": [
+    "altura2 = float(input(\"Dime la altura\").replace(\",\",\".\"))\n",
+    "base2 = float(input(\"Dime la base\").replace(\",\",\".\"))\n",
+    "area =altura2 * base2\n",
+    "print(area)"
+   ]
   },
   {
    "attachments": {
@@ -151,14 +207,22 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 9,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Javi, naciste en el año 1999.\n"
+     ]
+    }
+   ],
    "source": [
-    "nombre = _______(\"¿Cuál es tu nombre? \")\n",
-    "edad = _____(input(\"¿Cuál es tu edad? \"))\n",
+    "nombre = input(\"¿Cuál es tu nombre? \")\n",
+    "edad = int(input(\"¿Cuál es tu edad? \"))\n",
     "año_actual = 2024  # Puedes cambiarlo según el año en curso\n",
-    "año_nacimiento = año_actual - _____\n",
+    "año_nacimiento = año_actual - edad\n",
     "\n",
     "print(f\"{nombre}, naciste en el año {año_nacimiento}.\")\n"
    ]
@@ -166,7 +230,7 @@
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "Python 3 (ipykernel)",
+   "display_name": "venv",
    "language": "python",
    "name": "python3"
   },
@@ -180,7 +244,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.12.6"
+   "version": "3.12.10"
   }
  },
  "nbformat": 4,
