--- a/01_Programacion_Basica/Sprint_01/Unidad_02_Python_I/02_Ejercicios_Workout/11_Ejercicios_Python_Basisc_I_3.ipynb
+++ b/01_Programacion_Basica/Sprint_01/Unidad_02_Python_I/02_Ejercicios_Workout/11_Ejercicios_Python_Basisc_I_3.ipynb
@@ -70,7 +70,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [
     {
@@ -85,7 +85,16 @@
      ]
     }
    ],
-   "source": []
+   "source": [
+    "A=4\n",
+    "B=\"text\" \n",
+    "C=4.1\n",
+    "print(A == B)\n",
+    "print(A != C)\n",
+    "print(A > C)\n",
+    "print(C<=A)\n",
+    "print(B !=C)"
+   ]
   },
   {
    "attachments": {
@@ -104,10 +113,25 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 4,
    "metadata": {},
-   "outputs": [],
-   "source": []
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Son diferentes\n"
+     ]
+    }
+   ],
+   "source": [
+    "uno = input(\"Dime un número\")\n",
+    "dos = input(\"Dime otro número\")\n",
+    "if uno == dos:\n",
+    "    print (\"Son iguales\")\n",
+    "else:\n",
+    "    print (\"Son diferentes\")"
+   ]
   },
   {
    "attachments": {
@@ -126,19 +150,28 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 6,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Todos son iguales: False\n",
-      "Todos son iguales: False\n"
+      "Son diferentes\n"
      ]
     }
    ],
-   "source": []
+   "source": [
+    "uno = input(\"Dime un número\")\n",
+    "dos = input(\"Dime otro número\")\n",
+    "tres = input(\"Dime un último número\")\n",
+    "if uno == dos and uno == tres:\n",
+    "    print (\"Todos son iguales\")\n",
+    "elif uno == dos or uno == tres: \n",
+    "    print (\"Dos son iguales\")\n",
+    "else:\n",
+    "    print (\"Son diferentes\")"
+   ]
   },
   {
    "attachments": {
@@ -160,6 +193,109 @@
    ]
   },
   {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "False"
+      ]
+     },
+     "execution_count": 7,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "\n",
+    "not False and True and not True"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 8,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "False"
+      ]
+     },
+     "execution_count": 8,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "\n",
+    "(False or False or False or True) and False"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 9,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "False"
+      ]
+     },
+     "execution_count": 9,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "\n",
+    "not ((True or False) and (True or False))"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 10,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "False"
+      ]
+     },
+     "execution_count": 10,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "True and True and False"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 16,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "False"
+      ]
+     },
+     "execution_count": 16,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "not True"
+   ]
+  },
+  {
    "cell_type": "markdown",
    "metadata": {},
    "source": []
@@ -167,7 +303,7 @@
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "Python 3 (ipykernel)",
+   "display_name": "venv",
    "language": "python",
    "name": "python3"
   },
@@ -181,7 +317,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.12.6"
+   "version": "3.12.10"
   }
  },
  "nbformat": 4,
