--- a/01_Programacion_Basica/Sprint_01/Unidad_02_Python_I/02_Ejercicios_Workout/12_Ejercicios_Python_Basisc_I_4.ipynb
+++ b/01_Programacion_Basica/Sprint_01/Unidad_02_Python_I/02_Ejercicios_Workout/12_Ejercicios_Python_Basisc_I_4.ipynb
@@ -61,10 +61,27 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 2,
    "metadata": {},
-   "outputs": [],
-   "source": []
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "8\n",
+      "17\n",
+      "63.45\n",
+      "74\n"
+     ]
+    }
+   ],
+   "source": [
+    "lista = [4, 6, 8, -1]\n",
+    "print(max(lista))\n",
+    "print(sum(lista))\n",
+    "print(round(63.451256965,2))\n",
+    "print(abs(-74))\n"
+   ]
   },
   {
    "attachments": {
@@ -92,7 +109,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 7,
    "metadata": {},
    "outputs": [
     {
@@ -103,12 +120,20 @@
       "en un lugar de la mancha, de cuyo nombre no quiero acordarme.\n",
       "En Un Lugar De La Mancha, De Cuyo Nombre No Quiero Acordarme.\n",
       "['En', 'un', 'lugar', 'de', 'la', 'Mancha,', 'de', 'cuyo', 'nombre', 'no', 'quiero', 'acordarme.']\n",
-      "En un lugar de la Mancha; de cuyo nombre no quiero acordarme.\n",
+      "En un lugar de la Mancha. de cuyo nombre no quiero acordarme.\n",
       "En un lugr de l Mnch, de cuyo nombre no quiero cordrme.\n"
      ]
     }
    ],
-   "source": []
+   "source": [
+    "string = \"En un lugar de la Mancha, de cuyo nombre no quiero acordarme.\"\n",
+    "print(string.upper())\n",
+    "print(string.lower())\n",
+    "print(string.title())\n",
+    "print(string.split(\" \"))\n",
+    "print(string.replace(\",\",\".\"))\n",
+    "print((string.replace(\"a\",\"\")))"
+   ]
   },
   {
    "attachments": {
@@ -138,26 +163,44 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 10,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
+      "[1, 2, 3, 4]\n",
       "10\n",
-      "[2, 3, 4]\n",
-      "[2, 3, 5, 4]\n",
-      "[2, 3, 5, 4, 6, 7, 8, 9]\n"
+      "[1, 3, 4]\n",
+      "[1, 3, 4, 5]\n",
+      "[1, 3, 4, 5, 5, 6, 7, 8]\n",
+      "[1, 3, 4, 5]\n",
+      "[5, 4, 3, 1]\n"
      ]
     }
    ],
-   "source": []
+   "source": [
+    "lista2 = [1,2,3]\n",
+    "lista2.append(4)\n",
+    "print(lista2)\n",
+    "print(sum(lista2))\n",
+    "lista2.pop(1)\n",
+    "print(lista2)\n",
+    "lista2.insert(3,5)\n",
+    "print(lista2)\n",
+    "lista3 = [5,6,7,8]\n",
+    "print(lista2 + lista3)\n",
+    "lista2.sort()\n",
+    "print(lista2)\n",
+    "lista2.sort(reverse=True)\n",
+    "print(lista2)"
+   ]
   }
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "Python 3 (ipykernel)",
+   "display_name": "venv",
    "language": "python",
    "name": "python3"
   },
@@ -171,7 +214,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.12.6"
+   "version": "3.12.10"
   }
  },
  "nbformat": 4,
