--- a/01_Programacion_Basica/Sprint_01/Unidad_02_Python_I/03_Practica_Obligatoria/18_Practica_Obligatoria_Python_I.ipynb
+++ b/01_Programacion_Basica/Sprint_01/Unidad_02_Python_I/03_Practica_Obligatoria/18_Practica_Obligatoria_Python_I.ipynb
@@ -55,10 +55,29 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 12,
    "metadata": {},
-   "outputs": [],
-   "source": []
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Estupendo, se están preparando 2 pizzas familiares y 3 pizzas medianas.\n",
+      "Le mandaremos las 5 pizzas a la dirección av manuel azaña. Serán 47.6. Muchas gracias por su pedido.\n"
+     ]
+    }
+   ],
+   "source": [
+    "pizz_familiar = input(\"Buenas tardes, bienvenido al servicio de pedido online, el precio de nuestra pizzas es de 8,95 para la familiar o de 9,90 para la mediana ¿Cuántas pizzas  familiares desea?\")\n",
+    "pizz_mediana = input(\"Estupendo, ¿cuántas pizzas medianas desea?\")\n",
+    "cantidad = int(pizz_familiar)+int(pizz_mediana)\n",
+    "respuesta1 = \"Estupendo, se están preparando \"+ pizz_familiar+\" pizzas familiares y \"+ pizz_mediana+\" pizzas medianas.\"\n",
+    "print(respuesta1)\n",
+    "dirección  = input(\" Digame su dirección\")\n",
+    "precio = 8.95*float(pizz_familiar) +9.90*float(pizz_mediana)\n",
+    "respuestafinal = \"Le mandaremos las \"+ str(cantidad)+\" pizzas a la dirección \" +dirección+\". Serán \"+ str(precio)+\". Muchas gracias por su pedido.\"\n",
+    "print(respuestafinal)"
+   ]
   },
   {
    "attachments": {
@@ -85,13 +104,34 @@
    "cell_type": "code",
    "execution_count": null,
    "metadata": {},
-   "outputs": [],
-   "source": []
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "['1', '2', '3']\n",
+      "máximo = 3 / mínimo = 1 / sumatorio = 6\n",
+      "¿Es igual que el número máximo menos el mínimo es igual a la suma total dividida entre 5?\n",
+      "False 2 no es igual a 1.2\n"
+     ]
+    }
+   ],
+   "source": [
+    "lista=(input(\"Dame tres numeros enteros separados en comas(por ejemplo: 1, 2, 3)\")).split(\",\")\n",
+    "listafinal=list(map(int,lista))\n",
+    "print(lista)\n",
+    "print(\"máximo =\",max(listafinal), \"/ mínimo =\", min(listafinal),\"/ sumatorio =\", sum (listafinal))\n",
+    "print(\"¿Es Verdad que el número máximo menos el mínimo es igual a la suma total dividida entre 5?\")\n",
+    "if max(listafinal)-min(listafinal) == sum(listafinal)/5:\n",
+    "    print(\"True\", max(listafinal)-min(listafinal),\"no es igual a\", sum(listafinal)/5)\n",
+    "else:\n",
+    "    print(\"False\", max(listafinal)-min(listafinal),\"no es igual a\", sum(listafinal)/5)"
+   ]
   }
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "Python 3 (ipykernel)",
+   "display_name": "venv",
    "language": "python",
    "name": "python3"
   },
@@ -105,7 +145,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.12.6"
+   "version": "3.12.10"
   }
  },
  "nbformat": 4,
